--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1130,6 +1130,40 @@
     "withdrawing": "Abhebung",
     "withdrawn": "Abgehoben",
     "withdrawn_items_hint": "Abgehobene Artikel Hinweis",
-    "xp_earned_for": "XP wird verdient für:"
+    "xp_earned_for": "XP wird verdient für:",
+    "upgrade_title": "Gegenstand-Upgrade",
+    "upgrade_subtitle": "Verbessern Sie Ihre Gegenstände zu wertvolleren",
+    "upgrade_processing": "Upgrade wird verarbeitet...",
+    "upgrade_chance_was": "Erfolgswahrscheinlichkeit war {{chance}}",
+    "upgrade_rolled_value": "Gewürfelter Wert: {{value}}",
+    "upgrade_success": "Upgrade erfolgreich",
+    "upgrade_failed": "Upgrade fehlgeschlagen",
+    "upgrade_item_value": "Gegenstandswert",
+    "upgrade_target_value": "Zielwert",
+    "upgrade_success_chance": "Erfolgswahrscheinlichkeit",
+    "upgrade_price_ratio": "Preisverhältnis",
+    "upgrade_select_both_items": "Bitte wählen Sie sowohl Quell- als auch Zielgegenstände aus",
+    "upgrade_received_item": "Sie haben erhalten: {{item}}",
+    "upgrade_item_lost": "Gegenstand verloren: {{item}}",
+    "upgrade_warning_title": "Wichtige Informationen",
+    "upgrade_warning_lose_item": "Sie können Ihren Gegenstand verlieren, wenn das Upgrade fehlschlägt",
+    "upgrade_warning_no_guarantee": "Es gibt keine Erfolgsgarantie - alles hängt vom Glück ab",
+    "upgrade_warning_higher_value": "Zielgegenstände sind immer teurer als Quellgegenstände",
+    "upgrade_warning_min_value": "Mindestwert für Upgrade: 10 CR",
+    "upgrade_selected_source": "Ausgewählter Quellgegenstand",
+    "upgrade_not_selected": "Nicht ausgewählt",
+    "upgrade_selected_target": "Ausgewählter Zielgegenstand",
+    "upgrade_search_placeholder": "Gegenstände suchen...",
+    "upgrade_perform_upgrade": "Upgrade durchführen",
+    "upgrade_step_1_title": "1. Quellgegenstand auswählen",
+    "upgrade_loading_items": "Gegenstände werden geladen...",
+    "upgrade_error_loading_items": "Fehler beim Laden der Gegenstände",
+    "upgrade_try_again": "Erneut versuchen",
+    "upgrade_no_items_available": "Keine Gegenstände für Upgrade verfügbar",
+    "upgrade_open_cases_to_upgrade": "Öffnen Sie Kisten, um Gegenstände für Upgrades zu erhalten",
+    "upgrade_step_2_title": "2. Zielgegenstand auswählen",
+    "upgrade_select_source_first": "Wählen Sie zuerst einen Quellgegenstand aus",
+    "upgrade_loading_options": "Upgrade-Optionen werden geladen...",
+    "upgrade_no_upgrade_options": "Keine Upgrade-Optionen für diesen Gegenstand verfügbar"
   }
 }
