--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -926,5 +926,41 @@
     "you_play": "You play:",
     "goal": "Goal:",
     "goal_description": "Get 3 symbols in a row (horizontally, vertically or diagonally) to win!"
+  },
+  "upgrade": {
+    "title": "Item Upgrade",
+    "subtitle": "Upgrade your items to more valuable ones",
+    "processing": "Processing upgrade...",
+    "chance_was": "Success chance was {{chance}}",
+    "rolled_value": "Rolled value: {{value}}",
+    "success": "Upgrade Success",
+    "failed": "Upgrade Failed",
+    "item_value": "Item Value",
+    "target_value": "Target Value",
+    "success_chance": "Success Chance",
+    "price_ratio": "Price Ratio",
+    "select_both_items": "Please select both source and target items",
+    "received_item": "You received: {{item}}",
+    "item_lost": "Item lost: {{item}}",
+    "warning_title": "Important Information",
+    "warning_lose_item": "You may lose your item if the upgrade fails",
+    "warning_no_guarantee": "There is no guarantee of success - everything depends on chance",
+    "warning_higher_value": "Target items are always more expensive than source items",
+    "warning_min_value": "Minimum item value for upgrade: 10 CR",
+    "selected_source": "Selected Source Item",
+    "not_selected": "Not selected",
+    "selected_target": "Selected Target Item",
+    "search_placeholder": "Search for items...",
+    "perform_upgrade": "Perform Upgrade",
+    "step_1_title": "1. Select Source Item",
+    "loading_items": "Loading items...",
+    "error_loading_items": "Error loading items",
+    "try_again": "Try Again",
+    "no_items_available": "No items available for upgrade",
+    "open_cases_to_upgrade": "Open cases to get items you can upgrade",
+    "step_2_title": "2. Select Target Item",
+    "select_source_first": "Select source item first",
+    "loading_options": "Loading upgrade options...",
+    "no_upgrade_options": "No upgrade options available for this item"
   }
 }
