--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1158,6 +1158,40 @@
     "withdrawing": "Retirando",
     "withdrawn": "Retirado",
     "withdrawn_items_hint": "Consejo de objetos retirados",
-    "xp_earned_for": "XP ganado por:"
+    "xp_earned_for": "XP ganado por:",
+    "upgrade_title": "Mejora de Objetos",
+    "upgrade_subtitle": "Mejora tus objetos a otros más valiosos",
+    "upgrade_processing": "Procesando mejora...",
+    "upgrade_chance_was": "La probabilidad de éxito era {{chance}}",
+    "upgrade_rolled_value": "Valor obtenido: {{value}}",
+    "upgrade_success": "Mejora Exitosa",
+    "upgrade_failed": "Mejora Fallida",
+    "upgrade_item_value": "Valor del Objeto",
+    "upgrade_target_value": "Valor Objetivo",
+    "upgrade_success_chance": "Probabilidad de Éxito",
+    "upgrade_price_ratio": "Relación de Precios",
+    "upgrade_select_both_items": "Por favor selecciona tanto el objeto origen como el objetivo",
+    "upgrade_received_item": "Has recibido: {{item}}",
+    "upgrade_item_lost": "Objeto perdido: {{item}}",
+    "upgrade_warning_title": "Información Importante",
+    "upgrade_warning_lose_item": "Puedes perder tu objeto si la mejora falla",
+    "upgrade_warning_no_guarantee": "No hay garantía de éxito - todo depende de la suerte",
+    "upgrade_warning_higher_value": "Los objetos objetivo siempre son más caros que los objetos origen",
+    "upgrade_warning_min_value": "Valor mínimo del objeto para mejora: 10 CR",
+    "upgrade_selected_source": "Objeto Origen Seleccionado",
+    "upgrade_not_selected": "No seleccionado",
+    "upgrade_selected_target": "Objeto Objetivo Seleccionado",
+    "upgrade_search_placeholder": "Buscar objetos...",
+    "upgrade_perform_upgrade": "Realizar Mejora",
+    "upgrade_step_1_title": "1. Seleccionar Objeto Origen",
+    "upgrade_loading_items": "Cargando objetos...",
+    "upgrade_error_loading_items": "Error al cargar objetos",
+    "upgrade_try_again": "Intentar de Nuevo",
+    "upgrade_no_items_available": "No hay objetos disponibles para mejora",
+    "upgrade_open_cases_to_upgrade": "Abre cajas para obtener objetos que puedas mejorar",
+    "upgrade_step_2_title": "2. Seleccionar Objeto Objetivo",
+    "upgrade_select_source_first": "Selecciona primero el objeto origen",
+    "upgrade_loading_options": "Cargando opciones de mejora...",
+    "upgrade_no_upgrade_options": "No hay opciones de mejora disponibles para este objeto"
   }
 }
