--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1126,6 +1126,40 @@
     "withdrawing": "Retrait en cours",
     "withdrawn": "Retiré",
     "withdrawn_items_hint": "Conseil des objets retirés",
-    "xp_earned_for": "XP gagné pour :"
+    "xp_earned_for": "XP gagné pour :",
+    "upgrade_title": "Amélioration d'Objets",
+    "upgrade_subtitle": "Améliorez vos objets vers des plus précieux",
+    "upgrade_processing": "Traitement de l'amélioration...",
+    "upgrade_chance_was": "La chance de succès était {{chance}}",
+    "upgrade_rolled_value": "Valeur tirée: {{value}}",
+    "upgrade_success": "Amélioration Réussie",
+    "upgrade_failed": "Amélioration Échouée",
+    "upgrade_item_value": "Valeur de l'Objet",
+    "upgrade_target_value": "Valeur Cible",
+    "upgrade_success_chance": "Chance de Succès",
+    "upgrade_price_ratio": "Ratio de Prix",
+    "upgrade_select_both_items": "Veuillez sélectionner les objets source et cible",
+    "upgrade_received_item": "Vous avez reçu: {{item}}",
+    "upgrade_item_lost": "Objet perdu: {{item}}",
+    "upgrade_warning_title": "Informations Importantes",
+    "upgrade_warning_lose_item": "Vous pouvez perdre votre objet si l'amélioration échoue",
+    "upgrade_warning_no_guarantee": "Il n'y a aucune garantie de succès - tout dépend de la chance",
+    "upgrade_warning_higher_value": "Les objets cibles sont toujours plus chers que les objets sources",
+    "upgrade_warning_min_value": "Valeur minimale de l'objet pour amélioration: 10 CR",
+    "upgrade_selected_source": "Objet Source Sélectionné",
+    "upgrade_not_selected": "Non sélectionné",
+    "upgrade_selected_target": "Objet Cible Sélectionné",
+    "upgrade_search_placeholder": "Rechercher des objets...",
+    "upgrade_perform_upgrade": "Effectuer l'Amélioration",
+    "upgrade_step_1_title": "1. Sélectionner l'Objet Source",
+    "upgrade_loading_items": "Chargement des objets...",
+    "upgrade_error_loading_items": "Erreur lors du chargement des objets",
+    "upgrade_try_again": "Réessayer",
+    "upgrade_no_items_available": "Aucun objet disponible pour amélioration",
+    "upgrade_open_cases_to_upgrade": "Ouvrez des coffres pour obtenir des objets à améliorer",
+    "upgrade_step_2_title": "2. Sélectionner l'Objet Cible",
+    "upgrade_select_source_first": "Sélectionnez d'abord l'objet source",
+    "upgrade_loading_options": "Chargement des options d'amélioration...",
+    "upgrade_no_upgrade_options": "Aucune option d'amélioration disponible pour cet objet"
   }
 }
