--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1068,5 +1068,41 @@
       "本当にすごい！",
       "あなたはラッキーです！"
     ]
+  },
+  "upgrade": {
+    "title": "アイテムアップグレード",
+    "subtitle": "より価値のあるアイテムにアップグレードする",
+    "processing": "アップグレード処理中...",
+    "chance_was": "成功確率は{{chance}}でした",
+    "rolled_value": "出た値: {{value}}",
+    "success": "アップグレード成功",
+    "failed": "アップグレード失敗",
+    "item_value": "アイテム価値",
+    "target_value": "目標価値",
+    "success_chance": "成功確率",
+    "price_ratio": "価格比率",
+    "select_both_items": "ソースアイテムとターゲットアイテムの両方を選択してください",
+    "received_item": "獲得しました: {{item}}",
+    "item_lost": "アイテムを失いました: {{item}}",
+    "warning_title": "重要な情報",
+    "warning_lose_item": "アップグレードが失敗した場合、アイテムを失う可能性があります",
+    "warning_no_guarantee": "成功の保証はありません - すべて運次第です",
+    "warning_higher_value": "ターゲットアイテムは常にソースアイテムより高価です",
+    "warning_min_value": "アップグレードの最小アイテム価値: 10 CR",
+    "selected_source": "選択されたソースアイテム",
+    "not_selected": "選択されていません",
+    "selected_target": "選択されたターゲットアイテム",
+    "search_placeholder": "アイテムを検索...",
+    "perform_upgrade": "アップグレード実行",
+    "step_1_title": "1. ソースアイテムを選択",
+    "loading_items": "アイテム読み込み中...",
+    "error_loading_items": "アイテム読み込みエラー",
+    "try_again": "再試行",
+    "no_items_available": "アップグレード可能なアイテムがありません",
+    "open_cases_to_upgrade": "ケースを開いてアップグレード可能なアイテムを入手してください",
+    "step_2_title": "2. ターゲットアイテムを選択",
+    "select_source_first": "まずソースアイテムを選択してください",
+    "loading_options": "アップグレードオプション読み込み中...",
+    "no_upgrade_options": "このアイテムのアップグレードオプションがありません"
   }
 }
