--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -925,5 +925,41 @@
     "you_play": "Вы играете:",
     "goal": "Цель:",
     "goal_description": "Соберите 3 символа в ряд (по горизонтали, вертикали или диагонали), чтобы выиграть!"
+  },
+  "upgrade": {
+    "title": "Апгрейд предметов",
+    "subtitle": "Улучшайте свои предметы до более ценных",
+    "processing": "Обработка апгрейда...",
+    "chance_was": "Шанс успеха был {{chance}}",
+    "rolled_value": "Выпавшее значение: {{value}}",
+    "success": "Апгрейд успешен",
+    "failed": "Апгрейд провалился",
+    "item_value": "Стоимость предмета",
+    "target_value": "Целевая стоимость",
+    "success_chance": "Шанс успеха",
+    "price_ratio": "Ценовое соотношение",
+    "select_both_items": "Пожалуйста, выберите исходный и целевой предметы",
+    "received_item": "Вы получили: {{item}}",
+    "item_lost": "Предмет потерян: {{item}}",
+    "warning_title": "Важная информация",
+    "warning_lose_item": "Вы можете потерять свой предмет, если апгрейд провалится",
+    "warning_no_guarantee": "Нет гарантии успеха - всё зависит от удачи",
+    "warning_higher_value": "Целевые предметы всегда дороже исходных",
+    "warning_min_value": "Минимальная стоимость предмета для апгрейда: 10 КР",
+    "selected_source": "Выбранный исходный предмет",
+    "not_selected": "Не выбрано",
+    "selected_target": "Выбранный целевой предмет",
+    "search_placeholder": "Поиск предметов...",
+    "perform_upgrade": "Выполнить апгрейд",
+    "step_1_title": "1. Выберите исходный предмет",
+    "loading_items": "Загрузка предметов...",
+    "error_loading_items": "Ошибка загрузки предметов",
+    "try_again": "Попробовать снова",
+    "no_items_available": "Нет доступных предметов для апгрейда",
+    "open_cases_to_upgrade": "Откройте кейсы, чтобы получить предметы для апгрейда",
+    "step_2_title": "2. Выберите целевой предмет",
+    "select_source_first": "Сначала выберите исходный предмет",
+    "loading_options": "Загрузка вариантов апгрейда...",
+    "no_upgrade_options": "Нет вариантов апгрейда для этого предмета"
   }
 }
