--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -939,5 +939,41 @@
       "name": "专家",
       "description": "拥有价值超过50,000卢布的物品"
     }
+  },
+  "upgrade": {
+    "title": "物品升级",
+    "subtitle": "将您的物品升级为更有价值的物品",
+    "processing": "升级处理中...",
+    "chance_was": "成功率为{{chance}}",
+    "rolled_value": "掷出值: {{value}}",
+    "success": "升级成功",
+    "failed": "升级失败",
+    "item_value": "物品价值",
+    "target_value": "目标价值",
+    "success_chance": "成功率",
+    "price_ratio": "价格比率",
+    "select_both_items": "请选择源物品和目标物品",
+    "received_item": "您获得了: {{item}}",
+    "item_lost": "物品丢失: {{item}}",
+    "warning_title": "重要信息",
+    "warning_lose_item": "如果升级失败，您可能会失去您的物品",
+    "warning_no_guarantee": "不保证成功 - 一切都取决于运气",
+    "warning_higher_value": "目标物品总是比源物品更昂贵",
+    "warning_min_value": "升级的最低物品价值: 10 CR",
+    "selected_source": "已选择的源物品",
+    "not_selected": "未选择",
+    "selected_target": "已选择的目标物品",
+    "search_placeholder": "搜索物品...",
+    "perform_upgrade": "执行升级",
+    "step_1_title": "1. 选择源物品",
+    "loading_items": "加载物品中...",
+    "error_loading_items": "加载物品错误",
+    "try_again": "重试",
+    "no_items_available": "没有可升级的物品",
+    "open_cases_to_upgrade": "开启箱子获取可升级的物品",
+    "step_2_title": "2. 选择目标物品",
+    "select_source_first": "请先选择源物品",
+    "loading_options": "加载升级选项中...",
+    "no_upgrade_options": "此物品没有可用的升级选项"
   }
 }
