upgrade правильная настройка (-gpu)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -535,7 +535,7 @@
     "description": "Erhalte 3 gleiche Gegenstände zum Gewinnen",
     "spin_cost": "Dreh-Kosten",
     "your_balance": "Dein Guthaben",
-    "play_button": "Spielen (10 ₽)",
+    "play_button": "Spielen",
     "spinning": "Dreht...",
     "loading_items": "Lade Gegenstände...",
     "preparing_game": "Bereite Spiel vor",
