--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -534,7 +534,7 @@
     "description": "Obtén 3 objetos idénticos para ganar",
     "spin_cost": "Costo del Giro",
     "your_balance": "Tu Saldo",
-    "play_button": "Jugar (10 ₽)",
+    "play_button": "Jugar",
     "spinning": "Girando...",
     "loading_items": "Cargando objetos...",
     "preparing_game": "Preparando juego",
