--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -737,7 +737,7 @@
     "description": "Соберите 3 одинаковых предмета для победы",
     "spin_cost": "Стоимость спина",
     "your_balance": "Ваш баланс",
-    "play_button": "Играть (10 ₽)",
+    "play_button": "Играть",
     "spinning": "Крутится...",
     "loading_items": "Загружаем предметы...",
     "preparing_game": "Подготавливаем игру",
