--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -168,6 +168,8 @@
       "sold": "💰 Предметы, проданные за валюту или обмененные на подписку"
     },
     "loading_inventory": "Загрузка инвентаря...",
+    "loading_more": "Загрузка еще...",
+    "all_items_loaded": "Все предметы загружены",
     "case_not_found": "Кейс не найден в инвентаре",
     "case_template_not_found": "Шаблон кейса не найден",
     "item_received": "Поздравляем! Вы получили: {{itemName}}",
