--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -630,7 +630,80 @@
     "Иметь предмет с ценой выше 50,000 руб": {
       "name": "Эксперт",
       "description": "Иметь предмет с ценой выше 50,000 руб"
-    }
+    },
+    "Обменник": {
+      "name": "Обменник",
+      "description": "Обменяйте 5 предметов на подписку"
+    },
+    "Игрок в слоты": {
+      "name": "Игрок в слоты",
+      "description": "Сыграйте в слоты 50 раз"
+    },
+    "Легенда": {
+      "name": "Легенда",
+      "description": "Получите предмет легендарной редкости"
+    },
+    "Платиновый торговец": {
+      "name": "Платиновый торговец",
+      "description": "Продайте предметов на общую сумму 100,000 руб"
+    },
+    "Мастер открытий": {
+      "name": "Мастер открытий",
+      "description": "Откройте 1,000 кейсов"
+    },
+    "Успешный улучшатель": {
+      "name": "Успешный улучшатель",
+      "description": "Успешно улучшите предмет с вероятностью менее 10%"
+    },
+    "Элитный игрок": {
+      "name": "Элитный игрок",
+      "description": "Достигните 50 уровня"
+    },
+    "Открыватель-профи": {
+      "name": "Открыватель-профи",
+      "description": "Откройте 10,000 кейсов"
+    },
+    "Удачливая серия": {
+      "name": "Удачливая серия",
+      "description": "Получите 5 редких предметов (Epic+) подряд"
+    },
+    "Элита элит": {
+      "name": "Элита элит",
+      "description": "Достигните 100 уровня"
+    },
+    "Джекпот": {
+      "name": "Джекпот",
+      "description": "Выиграйте джекпот в слотах"
+    },
+    "Ночной игрок": {
+      "name": "Ночной игрок",
+      "description": "Откройте кейс между 2:00 и 4:00 ночью"
+    },
+    "Удача новичка": {
+      "name": "Удача новичка",
+      "description": "Получите Epic предмет из первых 5 кейсов"
+    },
+    "Марафонец": {
+      "name": "Марафонец",
+      "description": "Открывайте кейсы 30 дней подряд"
+    },
+    "Постоянный клиент": {
+      "name": "Постоянный клиент",
+      "description": "Имейте активную подписку 45 дней подряд"
+    },
+    "view_all": "Посмотреть все достижения",
+    "modal": {
+      "title": "Достижения",
+      "completed": "Выполнено"
+    },
+    "category": {
+      "beginner": "Начинающий",
+      "regular": "Обычный",
+      "expert": "Эксперт",
+      "legendary": "Легендарный"
+    },
+    "progress": "Прогресс",
+    "completed": "Выполнено"
   },
   "roulette": {
     "wheel_of_fortune": "🎰 Колесо Фортуны",
