Модальное окно поверх header + фото фона

--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -230,7 +230,7 @@
       "purchase": "Покупка"
     },
     "drop_bonus_text": "% дроп",
-    "no_description": "Описание отсутствует",
+    "no_description": "Продайте предметов на общую сумму 100,000 руб",
     "achievements_not_loaded": "Достижения не загружены",
     "achievements_expand_hint": "Нажмите для подробностей",
     "achievements_collapse_hint": "Нажмите чтобы свернуть",
