--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -165,7 +165,7 @@
     "inventory_descriptions": {
       "active": "🎮 Ваши текущие предметы и неоткрытые кейсы",
       "withdrawn": "📤 Предметы на выводе: ожидающие отправки и уже отправленные в Steam",
-      "sold": "💰 Предметы, проданные за валюту или обмененные на подписку"
+      "sold": "💰 Предметы, проданные за валюту или обмененные на статус"
     },
     "loading_inventory": "Загрузка инвентаря...",
     "loading_more": "Загрузка еще...",
@@ -230,7 +230,7 @@
       "purchase": "Покупка"
     },
     "drop_bonus_text": "% дроп",
-    "no_description": "Продайте предметов на общую сумму 100,000 руб",
+    "no_description": "Обменяйте 5 предметов на статус",
     "achievements_not_loaded": "Достижения не загружены",
     "achievements_expand_hint": "Нажмите для подробностей",
     "achievements_collapse_hint": "Нажмите чтобы свернуть",
@@ -551,20 +551,20 @@
     "cards_supported": "• Поддерживаются банковские карты",
     "top_up_for": "Пополнить на {{amount}} ₽",
     "creating_payment": "Создание платежа...",
-    "select_subscription": "Выберите подписку",
+    "select_subscription": "Выберите статус",
     "subscription_description": "Статус дает бонус к шансу выпадения редких предметов и ежедневные бесплатные кейсы и многое другое",
-    "buy_subscription": "Купить подписку",
+    "buy_subscription": "Купить статус",
     "day_30": "30 дней",
     "drop_bonus": "к дропу",
     "case_per_day": "кейс в день",
     "no_duplicates": "Без дубликатов",
     "going_to_payment": "Переходим к оплате...",
-    "going_to_subscription_payment": "Переходим к оплате подписки...",
+    "going_to_subscription_payment": "Переходим к оплате статуса...",
     "status_purchased": "Статус успешно приобретен!",
     "enter_correct_amount": "Введите корректную сумму для пополнения",
     "minimum_amount": "Минимальная сумма пополнения: 100 рублей",
     "payment_error": "Ошибка при создании платежа",
-    "subscription_error": "Ошибка при покупке подписки"
+    "subscription_error": "Ошибка при покупке статуса"
   },
   "achievements": {
     "Новичок": {
@@ -581,11 +581,11 @@
     },
     "Подписчик": {
       "name": "Подписчик",
-      "description": "Иметь активную подписку 30 дней подряд"
+      "description": "Иметь активный статус 30 дней подряд"
     },
-    "Покупатель подписки": {
-      "name": "Покупатель подписки",
-      "description": "Приобрести любой уровень подписки"
+    "Покупатель статуса": {
+      "name": "Покупатель статуса",
+      "description": "Приобрести любой уровень статуса"
     },
     "Удачливый": {
       "name": "Удачливый",
@@ -611,13 +611,13 @@
       "name": "Премиум игрок",
       "description": "Найдите 3 предмета стоимостью от 100 руб"
     },
-    "Иметь активную подписку 30 дней подряд": {
+    "Иметь активный статус 30 дней подряд": {
       "name": "Подписчик",
-      "description": "Иметь активную подписку 30 дней подряд"
+      "description": "Иметь активный статус 30 дней подряд"
     },
-    "Приобрести любой уровень подписки": {
-      "name": "Покупатель подписки",
-      "description": "Приобрести любой уровень подписки"
+    "Приобрести любой уровень статуса": {
+      "name": "Покупатель статуса",
+      "description": "Приобрести любой уровень статуса"
     },
     "Открыть кейс 7 дней подряд": {
       "name": "Удачливый",
@@ -633,7 +633,7 @@
     },
     "Обменник": {
       "name": "Обменник",
-      "description": "Обменяйте 5 предметов на подписку"
+      "description": "Обменяйте 5 предметов на статус"
     },
     "Игрок в слоты": {
       "name": "Игрок в слоты",
@@ -689,7 +689,7 @@
     },
     "Постоянный клиент": {
       "name": "Постоянный клиент",
-      "description": "Имейте активную подписку 45 дней подряд"
+      "description": "Имейте активный статус 45 дней подряд"
     },
     "view_all": "Посмотреть все достижения",
     "modal": {
@@ -707,14 +707,14 @@
   },
   "roulette": {
     "wheel_of_fortune": "🎰 Колесо Фортуны",
-    "spin_and_win": "Крути колесо и выигрывай дни подписки!",
+    "spin_and_win": "Крути колесо и выигрывай дни статуса!",
     "games_per_day": "30 игр в день • Перезарядка каждые 48 минут",
     "next_game_in": "Следующая игра через:",
     "spin_wheel": "Крутить колесо",
     "spinning": "Крутится...",
     "prizes": "Призы:",
-    "subscription_1_day": "1 день подписки",
-    "subscription_2_days": "2 дня подписки",
+    "subscription_1_day": "1 день статуса",
+    "subscription_2_days": "2 дня статуса",
     "empty": "Пусто",
     "error_occurred": "Произошла ошибка",
     "something_went_wrong": "Что-то пошло не так",
@@ -778,7 +778,7 @@
     "min_exchange_price": "Минимальная стоимость предмета для обмена: {{price}}₽",
     "sell_percentage": "При продаже вы получаете 70% от стоимости предмета",
     "no_returns": "Обменянные предметы нельзя вернуть",
-    "days_accumulate": "Дни подписки суммируются с текущими",
+    "days_accumulate": "Дни статуса суммируются с текущими",
     "items_for_sale": "Предметы для продажи",
     "items_for_exchange": "Предметы для обмена",
     "items_count": "{{count}} предметов",
