--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -355,9 +355,9 @@
     "hide": "Hide",
     "more_items": "More items",
     "show_less": "Show Less",
-    "no_active_items": "No active items",
+    "no_active_items": "Inventory is empty",
     "no_opened_cases": "No opened cases",
-    "no_active_items_description": "User has no items in inventory yet",
+    "no_active_items_description": "User has withdrawn all active items",
     "no_opened_cases_description": "User hasn't opened cases yet, or items from cases were sold",
     "acquired": "Acquired:",
     "source": "Source:",
