--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -356,9 +356,9 @@
     "hide": "Скрыть",
     "more_items": "Ещё предметов",
     "show_less": "Показать меньше",
-    "no_active_items": "Нет активных предметов",
+    "no_active_items": "Инвентарь пуст",
     "no_opened_cases": "Нет открытых кейсов",
-    "no_active_items_description": "У пользователя пока нет предметов в инвентаре",
+    "no_active_items_description": "Пользователь забрал все активные предметы",
     "no_opened_cases_description": "Пользователь пока не открывал кейсы, или предметы из кейсов были проданы",
     "acquired": "Получен:",
     "source": "Источник:",
