--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1040,5 +1040,14 @@
     "select_source_first": "Сначала выберите исходный предмет",
     "loading_options": "Загрузка вариантов апгрейда...",
     "no_upgrade_options": "Нет вариантов апгрейда для этого предмета"
+  },
+  "onboarding": {
+    "cases_title": "🎁 Кейсы",
+    "cases_description": "Нажмите на кейс, чтобы посмотреть что внутри и открыть его! Каждый кейс содержит уникальные предметы.",
+    "deposit_title": "💰 Пополнение баланса",
+    "deposit_description": "Здесь вы можете пополнить баланс для покупки премиум кейсов, а так же покупки статуса. Покупая статус вы получаете бесплатные кейсы на протяжении всей вашей активности.",
+    "skip": "Пропустить",
+    "next": "Далее",
+    "finish": "Завершить"
   }
 }
