--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1017,7 +1017,11 @@
     "attempts_remaining": "Попыток осталось:",
     "you_play": "Вы играете:",
     "goal": "Цель:",
-    "goal_description": "Соберите 3 символа в ряд (по горизонтали, вертикали или диагонали), чтобы выиграть!"
+    "goal_description": "Соберите 3 символа в ряд (по горизонтали, вертикали или диагонали), чтобы выиграть!",
+    "no_subscription_title": "Требуется статус",
+    "no_subscription_message": "Приобретите статус для доступа к бонусной игре крестики-нолики",
+    "already_won_title": "Вы уже победили сегодня!",
+    "already_won_message": "Вы уже получили бонусный кейс сегодня. Возвращайтесь завтра за новой игрой!"
   },
   "upgrade": {
     "title": "Апгрейд предметов",
