--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -912,7 +912,7 @@
       "name": "Coleccionista",
       "description": "Encuentra 5 objetos raros"
     },
-    "Найдите 3 предмета стоимостью от 100 руб": {
+    "Найдите 3 предмета стоимостью от 100 chiCoins": {
       "name": "Jugador Premium",
       "description": "Encuentra 3 objetos valorados en 100+ rublos"
     },
