--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -995,7 +995,7 @@
     "you_lost": "😞 Вы проиграли",
     "draw": "🤝 Ничья",
     "your_turn": "🎮 Ваш ход",
-    "bot_turn": "🤖 Ход бота...",
+    "bot_turn": "⚔️ Ход противника...",
     "no_attempts_left": "У вас закончились попытки на сегодня!",
     "come_back_tomorrow": "Приходите завтра за новыми попытками.",
     "close": "Закрыть",
@@ -1010,7 +1010,7 @@
     "processing_result": "Обрабатываем результат...",
     "defeat": "Поражение",
     "no_luck_this_time": "В этот раз не повезло, но не сдавайтесь!",
-    "bot_won": "🤖 Бот играл ⭕ и выиграл",
+    "bot_won": "⚔️ Победил соперник",
     "good_game": "Хорошая игра! Попробуйте переиграть!",
     "draw_nobody_won": "🤝 Ничья - никто не выиграл",
     "processing_result_status": "⏳ Обрабатываем результат...",
